bunch of changes: * added projects section * added volunteering section * reordered "related courses" for better line wrapping * smaller font size * made sections <section>s instead of <div>s * enclosed each job in <div class="job"> * abolished <br>s between sections and jobs in favor of margin-bottom * made job titles <h3>s instead of <span>s * fixed a couple of missing quotation marks

--- a/resume.css
+++ b/resume.css
@@ -1,12 +1,13 @@
 body {
     background-color: #aaa;
     font-family: Georgia, serif;
-    font-size: 12pt;
+    font-size: 11.5pt;
+    line-height: 1.2;
 }
 
 #page {
-    max-width: 8in;
-    min-height: 10.5in;
+    width: 8in;
+    height: 10.5in;
     padding: 0.25in;
     margin-left: auto;
     margin-right: auto;
@@ -15,8 +16,8 @@ body {
 }
 
 #content {
-    max-width: 6.5in;
-    min-height: 9in;
+    width: 6.5in;
+    height: 9in;
     margin: auto;
     margin-bottom: 1in;
     position: relative;
@@ -33,15 +34,29 @@ h1, h2 {
 
 h1 {
     line-height: 1.1;
-    font-size: 24pt;
+    font-size: 22pt;
 }
 
 h2 {
-    font-size: 14pt;
+    font-size: 13pt;
+}
+
+h3 {
+    display: inline;
+    font-size: 100%;
+    margin: 0;
 }
 
 h1, h2, .title {
     font-family: "Trebuchet MS", sans-serif;
+}
+
+section {
+    margin-bottom: 1.6em;
+}
+
+.job {
+    margin-bottom: 1em;
 }
 
 ul {
